Refactoring & cleanups